<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<modelVersion>4.0.0</modelVersion>
	<groupId>geez.org</groupId>
	<artifactId>DocxConverter</artifactId>
	<version>0.7.0</version>
	<name>Word DOCX Converter</name>
	<dependencies>
		<dependency>
		    <groupId>org.controlsfx</groupId>
 		   <artifactId>controlsfx</artifactId>
  		  <version>8.40.14</version>
		</dependency>
		<dependency>
			<groupId>org.docx4j</groupId>
			<artifactId>docx4j</artifactId>
			<version>6.1.0</version>
		</dependency>
		<dependency>
			<groupId>com.ibm.icu</groupId>
			<artifactId>icu4j</artifactId>
			<version>63.1</version>
		</dependency>
		<dependency>
			<groupId>com.apple</groupId>
    		<artifactId>AppleJavaExtensions</artifactId>
    		<version>1.4</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>org.geez.convert.ui.DocxConverter</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<finalName>${project.artifactId}-${project.version}-full-gui</finalName>
					<appendAssemblyId>false</appendAssemblyId>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>